--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/Main.Main
+GlobalDefaultGameMode=/Game/GameObjects/BP_PolyBatGameMode.BP_PolyBatGameMode_C
+EditorStartupMap=/Game/Maps/Main.Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
